# expediente-cero

./: .env.example  .gitignore  LICENSE  Makefile  README.md  package.json  pyproject.toml  render.yaml
.github/workflows/: api-ci.yml  web-ci.yml
apps/api/: alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260713_0001_initial_persistence.py  20260714_0002_add_analyzed_case_status.py  20260714_0003_add_validation_version.py  20260715_0004_add_follow_up_workflow.py
apps/api/app/: __init__.py  demo.py  main.py
apps/api/app/api/: errors.py  schemas.py
apps/api/app/api/routes/: cases.py  health.py
apps/api/app/application/: analysis.py  follow_up.py  intake.py  reviewer.py  validation.py  validation_templates.py
apps/api/app/application/ports/: __init__.py  analyzers.py  drafters.py  repositories.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/domain/: __init__.py  entities.py  enums.py  errors.py  transitions.py
apps/api/app/infrastructure/: __init__.py
apps/api/app/infrastructure/persistence/: __init__.py  database.py  fixtures.py  models.py  (+1 more)
apps/api/tests/: __init__.py  test_health.py
apps/api/tests/application/: test_follow_up.py  test_validation.py
apps/api/tests/domain/: test_entities.py  test_follow_up_domain.py  test_transitions.py
apps/api/tests/integration/: conftest.py  test_cases_api.py  test_demo_cli.py  test_follow_up_api.py  test_migrations.py  test_render_blueprint.py  test_repositories.py  test_reviewer_read_api.py  test_validation_api.py
apps/api/tests/integrations/: test_openai_analyzer.py  test_openai_follow_up_drafter.py
apps/web/: .env.example  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: case-queue.tsx  case-workspace.tsx  new-case-form.tsx  status.tsx
apps/web/lib/: api.ts  labels.ts  types.ts
apps/web/tests/: api.test.ts  case-queue.test.tsx  case-workspace.test.tsx  fixtures.ts  layout.test.tsx  new-case-form.test.tsx  proxy.test.ts  status.test.tsx
apps/web/tests/e2e/: reviewer-flow.spec.ts
docs/adr/: ADR-001-responses-structured-output.md  ADR-002-mandatory-human-approval.md  ADR-003-follow-up-drafting-and-human-review.md
docs/architecture/: 003-system-architecture.md  004-domain-model.md
docs/demo/: 008-demo-runbook.md
docs/hackathon/: BUILD_WEEK_EVIDENCE.md
docs/hackathon/screenshots/: README.md
docs/implementation/: 005-build-week-implementation-plan.md  006-block7-reviewer-interface.md  007-block8-demo-hardening.md
docs/product/: 001-product-definition.md  002-mvp-scope.md
docs/security/: 009-demo-security-review.md
scripts/: rehearse_demo.py
(+9 files in other folders)
